# HackOS-bench

./: .gitignore  README.md  final_ensemble.py  main.py  pyproject.toml
src/: bicycle.py  config.py  eval.py  settings.py  train.py
src/dataset/: bicycle.py  load_dataset.py  processing.py  transforms.py  url_list.py  utils.py  visualization.py
src/models/: EfficientNet.py  MobileNetV2.py  ViT.py  base.py  cnn.py  efficientNet.py  ensemble.py  hackos.py  resnet.py  resnet_old.py
