[project]
name = "hackos-bench"
version = "0.1.0"
description = "Our bike detection project for the HackOS-1 hackathon."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "betamark",
    "datasets>=3.0.2",
    "imageio>=2.36.0",
    "timm>=1.0.11",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "tqdm>=4.66.5",
]

[tool.uv.sources]
betamark = { git = "https://github.com/exobyte-labs/betamark.git" }
