[project]
name = "hackos-bench"
version = "0.1.0"
description = "Our bike detection project for the HackOS-1 hackathon."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=3.0.2",
    "evaluate>=0.4.3",
    "huggingface-hub>=0.26.0",
    "imageio>=2.36.0",
    "ipykernel>=6.29.5",
    "numpy>=2.1.2",
    "matplotlib>=3.9.2",
    "opencv-python>=4.10.0.84",
    "pathlib>=1.0.1",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.1",
    "tensorboard>=2.18.0",
    "timm>=1.0.11",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "tqdm>=4.66.5",
    "transformers[torch]>=4.46.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "albumentations>=1.4.20",
    "betamark",
]

[tool.uv.sources]
betamark = { git = "https://github.com/exobyte-labs/betamark.git" }
